# LuminS

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
src/: cli.yml  lib.rs  main.rs
src/lumins/: core.rs  file_ops.rs  mod.rs  parse.rs  progress.rs
tools/: benchmark.sh
