[package]
name = "lms"
version = "0.1.1"
authors = ["Wesley Chang <wesleycanada@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A fast and reliable alternative to rsync for synchronizing local files"

repository = "https://github.com/wchang22/lumins"
readme = "./README.md"
keywords = ["rsync", "LuminS", "filesystem", "command-line", "sync"]
categories = ["command-line-utilities", "filesystem", ]

[badges]
travis-ci = { repository = "wchang22/LuminS", branch = "master" }
codecov = { repository = "wchang22/LuminS", branch = "master", service = "github" }

[dependencies]
rayon = "1.0.3"
blake2 = "0.8.0"
rayon-hash = "0.4.1"
seahash = "3.0.5"
clap = {version = "2.32", features = ["yaml"]}
env_logger = "0.6.0"
log = "0.4.6"
